--- a/css/jumbotron.css
+++ b/css/jumbotron.css
@@ -1,11 +1,17 @@
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+  padding-top: 70px;
   padding-bottom: 20px;
 }
-.navbar {
-  /* height: 70px; */
+
+/*.jumbotron {
+    padding-bottom: 0px;
 }
-.navbar-brand {
-  padding: 0;
+*/
+.navbar-brand,
+.navbar-nav li a {
+    line-height: 70px;
+    height: 70px;
+    padding-top: 0;
+    padding-left: 0;
 }
