--- a/app/templates/pgsql-related.html
+++ b/app/templates/pgsql-related.html
@@ -16,7 +16,7 @@
             <a href="{{ parm.doc_url | adjust_version : form.version }}">{{ parm.name }}</a>
           </td>
           <td class="col-sm-1" ng-repeat="env in enviroments">
-            <span ng-repeat="rule in parm.rules | filter: env.name" title="{{rule.formula}}">{{rule.formula | process_formula : form.total_ram : parm.max_value : form.max_connections | format_field : parm.format }}</span>
+            <span ng-repeat="rule in parm.rules | filter: env.name" title="{{rule.formula}}">{{rule.formula | process_formula : form.total_ram : parm.max_value : form.max_connections | numeraljs : parm.format }}</span>
           </td>
         </tr>
       </tbody>
