--- a/app/templates/server-details.html
+++ b/app/templates/server-details.html
@@ -6,7 +6,7 @@
                 <label for="total_memory">Total Memory</label>
                 <div class="input-group">
                   <input id="total_memory" type="number" min="1" max="1096" class="form-control"  ng-minlength="1"
-       ng-maxlength="1096" ng-model="form.total_ram" ng-init="form.total_ram=2" required/>
+       ng-maxlength="1096" ng-model="form.total_ram" ng-init="form.total_ram=2" required auto-focus/>
                   <span class="input-group-addon">GB</span>
                 </div>
             </div>
