--- a/app/templates/server-details.html
+++ b/app/templates/server-details.html
@@ -21,6 +21,8 @@
             <div class="col-sm-12">
                 <label for="pg_version">Version</label>
                 <select class="form-control" id="pg_version" name="server[pg_version]" ng-model="form.version" ng-init="form.version=9.4">
+                    <option value="9.0">9.0.x</option>
+                    <option value="9.1">9.1.x</option>
                     <option value="9.2">9.2.x</option>
                     <option value="9.3">9.3.x</option>
                     <option value="9.4" selected="selected">9.4.x</option>
