--- a/app/templates/server-details.html
+++ b/app/templates/server-details.html
@@ -20,12 +20,13 @@
         <div class="form-group">
             <div class="col-sm-12">
                 <label for="pg_version">Version</label>
-                <select class="form-control" id="pg_version" name="server[pg_version]" ng-model="form.version" ng-init="form.version=9.4">
+                <select class="form-control" id="pg_version" name="server[pg_version]" ng-model="form.version" ng-init="form.version=9.5">
                     <option value="9.0">9.0.x</option>
                     <option value="9.1">9.1.x</option>
                     <option value="9.2">9.2.x</option>
                     <option value="9.3">9.3.x</option>
-                    <option value="9.4" selected="selected">9.4.x</option>
+                    <option value="9.4">9.4.x</option>
+                    <option value="9.5" selected="selected">9.5.x</option>
                 </select>
             </div>
         </div>
