fixing api call by the menu

--- a/app/partials/tuning.html
+++ b/app/partials/tuning.html
@@ -1,7 +1,66 @@
 <div ng-controller="TuningController" layout="column" flex layout-fill ng-cloak>
     <ng-include src="'/app/partials/tuning-toolbar.html'"></ng-include>
-    <ng-include src="'/app/partials/tuning-menu.html'"></ng-include>
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="true">
+        <md-toolbar>
+            <h1 class="md-toolbar-tools">Server Options</h1>
+        </md-toolbar>
+        <md-content layout-padding="" flex>
+            <form name="projectForm">
+                <md-input-container style="width: 80%;">
+                    <label for="i_total_memory">Total Memory (GB)</label>
+                    <input required type="number" id="i_total_memory" ng-model="total_memory" min="1" max="3072" />
+                    <div ng-messages="projectForm.i_total_memory.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <div class="radioButtondemoBasicUsage">
+                    <p>Enviroment:</p>
+                    <md-radio-group ng-model="enviroment">
+                        <md-radio-button ng-repeat="d in envFilters" ng-value="d.value" aria-label="{{ d.description }}">
+                            {{ d.value }} <br/>
+                            <span>{{d.description}}</span>
+                        </md-radio-button>
+                    </md-radio-group>
+                </div>
+                <md-input-container style="width: 80%;">
+                    <label for="i_max_connections">Max connections</label>
+                    <input required type="number" id="i_max_connections" ng-model="max_connections" min="100" max="99999" />
+                    <div ng-messages="projectForm.i_max_connections.$error">
+                        <div ng-message="required">This is required.</div>
+                    </div>
+                </md-input-container>
+                <md-input-container style="width: 80%;">
+                    <label>PostgreSQL version</label>
+                    <md-select ng-model="pg_version">
+                        <md-option ng-repeat="version in supported_versions" value="{{version}}">
+                            {{version}}
+                        </md-option>
+                    </md-select>
+                </md-input-container>
+                <md-button ng-click="call_api()" class="md-raised md-primary">
+                    RUN IT NOW!
+                </md-button>
+            </form>
+        </md-content>
+
+    </md-sidenav>
     <md-content>
+        <section>
+            <md-subheader class="md-primary">Summary</md-subheader>
+            <md-list layout-padding>
+                <md-list-item class="md-3-line"style="margin-bottom: 10px;">
+                    <div class="md-list-item-text">
+                        <p>Sugested tuning for the parameters below:</p>
+                        <ul>
+                            <li>{{total_memory}}GB of memory avaliable for the database;</li>
+                            <li>{{max_connections}} connections are spected;</li>
+                            <li>For {{enviroment}}-base enviroment</li>
+                            <li>Using PostgreSQL {{pg_version}} version.</li>
+                        </ul>
+                    </div>
+                </md-list-item>
+            </md-list>
+        </section>
         <section ng-repeat="category in api_data">
             <md-subheader class="md-primary">{{category.description}}</md-subheader>
             <md-list layout-padding>
@@ -9,7 +68,7 @@
                     <div class="md-list-item-text">
                         <h3>{{param.name}} ({{param.documentation.type}})</h3>
                         <h4>Sugested value: {{ param.config_value }}</h4>
-                        <p ng-repeat="doc_line in param.documentation.details" >{{doc_line}}</p>
+                        <p ng-repeat="doc_line in param.documentation.details" style="margin-left: 20px;">{{doc_line}}</p>
                     </div>
                 </md-list-item>
             </md-list>
