adding export option

--- a/app/partials/share-url.html
+++ b/app/partials/share-url.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="Mango (Fruit)"  ng-cloak>
+<md-dialog aria-label="Share URL"  ng-cloak>
   <form>
     <md-toolbar class="md-secundary">
       <div class="md-toolbar-tools">
