--- a/app/partials/tuning-toolbar.html
+++ b/app/partials/tuning-toolbar.html
@@ -5,8 +5,11 @@
             <md-button class="md-raised md-warn" ng-click="open_menu()" aria-label="Learn More">
             (re)generate
             </md-button>
-            <md-button class="md-raised md-secudary" ng-click="showAdvanced($event)" aria-label="Learn More">
+            <md-button class="md-raised md-secudary" ng-click="showShareURL($event)" aria-label="Get the share URL">
             share!
+            </md-button>
+            <md-button class="md-raised md-secudary" ng-click="showExportWindow($event)" aria-label="Export to SQL or config file">
+            Export
             </md-button>
         </span>
     </div>
