adding npm server and spliting app into modules

--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -3,7 +3,7 @@
     <p>PGConfig its a web tool created to help people use PostgreSQL.</p>
     <p>When I start write PGConfig, I used <a href="https://github.com/gregs1104/pgtune">pgtune</a> as reference and get some
         ideas from it.</p>
-    <p>If you want to help, all source, including the API are avaliable on github:</p>
+    <p>If you want to help, all source code - including the API, are avaliable on github:</p>
     <ul>
         <li>This UI: <a href="https://github.com/sebastianwebber/pgconfig">https://github.com/sebastianwebber/pgconfig</a></li>
         <li>API: <a href="https://github.com/sebastianwebber/pgconfig-api">https://github.com/sebastianwebber/pgconfig-api</a></li>
