--- a/app/partials/app-toolbar.html
+++ b/app/partials/app-toolbar.html
@@ -1,4 +1,4 @@
-<md-toolbar ng-controller="HeaderController" class="md-accent">
+<md-toolbar ng-controller="MainHeaderController" class="md-accent">
     <h2 class="md-toolbar-tools">
         <span>{{app_desc}} <sup>{{app_version}}</sup> </span>
     </h2>
