fix generate label, adding grunt watch (for dev purposes), fix styles path, removing templatecache from source (added with grunt )

--- a/src/app/templates/tuning/toolbar.html
+++ b/src/app/templates/tuning/toolbar.html
@@ -2,7 +2,7 @@
     <div class="md-toolbar-tools md-toolbar-tools-bottom">
         <span flex></span>
         <span layout="row" layout-sm="column">
-            <md-button class="md-raised md-warn" ng-click="open_menu()" aria-label="Learn More">
+            <md-button class="md-raised md-warn" ng-click="open_menu()" aria-label="(re)generate">
             (re)generate
             </md-button>
             <md-button class="md-raised md-secudary" ng-click="showShareURL($event)" aria-label="Get the share URL">
