moving tuning/export to a new page

--- a/src/app/templates/tuning/toolbar.html
+++ b/src/app/templates/tuning/toolbar.html
@@ -8,7 +8,7 @@
             <md-button class="md-raised md-secudary" ng-click="showShareURL($event)" aria-label="Get the share URL">
             share!
             </md-button>
-            <md-button class="md-raised md-secudary" ng-click="showExportWindow($event)" aria-label="Export to SQL or config file">
+            <md-button class="md-raised md-secudary" ng-click="openExportURL()" aria-label="Export to SQL or config file">
             Export
             </md-button>
         </span>
