--- a/src/app/templates/tuning/export/main.html
+++ b/src/app/templates/tuning/export/main.html
@@ -36,7 +36,7 @@
         <div layout="row">
             <md-card flex>
                 <md-card-content>
-                    <pre>{{code_output}}</pre>
+                    <code hljs source="code_output"></code>
                 </md-card-content>
             </md-card>
         </div>
