--- a/src/app/templates/tuning/export/main.html
+++ b/src/app/templates/tuning/export/main.html
@@ -1,14 +1,20 @@
 <div ng-controller="TuningExportController" layout="column" flex layout-fill ng-cloak>
     <md-content>
-        <md-toolbar class="md-menu-toolbar">
-            <div layout="row">
-                <md-toolbar-filler layout layout-align="space-around center">
-                    <md-icon md-font-set="material-icons">import_export</md-icon>
-                </md-toolbar-filler>
-                <div>
-                    <h3>&nbsp;Exporting Options</h3>
-                    <div layout="row">
-                        <md-input-container class="md-block">
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>
+                    <span>Exporting Options</span>
+                </h2>
+            </div>
+        </md-toolbar>
+        <div layout="row">
+
+
+        </div>
+        <div layout="row">
+            <md-card flex>
+                <md-card-actions layout="row" layout-align="start center">
+                        <md-input-container flex="50">
                             <label>Export format</label>
                             <md-select ng-model="export_format" ng-change="call_api()">
                                 <md-option ng-repeat="format in supported_formats" value="{{format.value}}">
@@ -16,12 +22,13 @@
                                 </md-option>
                             </md-select>
                         </md-input-container>
-                        <md-input-container>
+                        <span flex></span>
+                        <md-input-container flex="10">
                             <md-checkbox ng-model="generate_pgbadger" ng-change="call_api()" aria-label="Checkbox 1">
                                 PGBadger Stuff
                             </md-checkbox>
                         </md-input-container>
-                        <md-input-container>
+                        <md-input-container flex="30">
                             <label>Log format</label>
                             <md-select ng-disabled="!generate_pgbadger" ng-model="log_format" ng-change="call_api()">
                                 <md-option ng-repeat="format in log_format_options" value="{{format.value}}">
@@ -29,14 +36,11 @@
                                 </md-option>
                             </md-select>
                         </md-input-container>
-                    </div>
-                </div>
-            </div>
-        </md-toolbar>
-        <div layout="row">
-            <md-card flex>
+                </md-card-actions>
                 <md-card-content>
-                    <code hljs source="code_output" ng-show="code_output"></code>
+                    <div layout="column">
+                        <code hljs source="code_output" ng-show="code_output"></code>
+                    </div>
                 </md-card-content>
             </md-card>
         </div>
