--- a/src/app/templates/tuning/main.html
+++ b/src/app/templates/tuning/main.html
@@ -1,5 +1,5 @@
 <div ng-controller="TuningController" layout="column" flex layout-fill ng-cloak>
-    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="true">
+    <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="true" md-disable-backdrop>
         <md-toolbar>
             <h1 class="md-toolbar-tools">Server Options</h1>
         </md-toolbar>
